--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/core": "^7.18.2",
     "@babel/preset-env": "^7.18.2",
     "@babel/register": "^7.17.7",
+    "del": "^6.1.1",
     "gulp": "^4.0.2"
   },
   "dependencies": {
