added include html files

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp": "^4.0.2"
   },
   "dependencies": {
-    "gulp-cli": "^2.3.0"
+    "gulp-cli": "^2.3.0",
+    "gulp-file-include": "^2.3.0"
   }
 }
