--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
   },
   "homepage": "https://github.com/ViktoriaQA/gaq#readme",
   "devDependencies": {
-    "@babel/core": "^7.18.2",
-    "@babel/preset-env": "^7.18.2",
-    "@babel/register": "^7.17.7",
     "del": "^6.1.1",
-    "gulp": "^4.0.2"
+    "gulp": "^4.0.2",
+    "gulp-replace": "^1.1.3",
+    "gulp-version-number": "^0.2.4",
+    "gulp-webp-html-nosvg": "^1.1.1"
   },
   "dependencies": {
     "gulp-cli": "^2.3.0",
