--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/ViktoriaQA/gaq#readme",
   "devDependencies": {
+    "browser-sync": "^2.27.10",
     "del": "^6.1.1",
     "gulp": "^4.0.2",
     "gulp-notify": "^4.0.0",
