--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "gulp": "^4.0.2",
     "gulp-notify": "^4.0.0",
     "gulp-plumber": "^1.2.1",
+    "gulp-rename": "^2.0.0",
     "gulp-replace": "^1.1.3",
+    "gulp-sass": "^5.1.0",
     "gulp-version-number": "^0.2.4",
-    "gulp-webp-html-nosvg": "^1.1.1"
+    "gulp-webp-html-nosvg": "^1.1.1",
+    "sass": "^1.52.3"
   },
   "dependencies": {
     "gulp-cli": "^2.3.0",
