--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "gulp-webp-html-nosvg": "^1.1.1",
     "gulp-webpcss": "^1.1.1",
     "sass": "^1.52.3",
-    "webp-converter": "^2.2.3"
+    "swiper": "^8.2.3",
+    "webp-converter": "^2.2.3",
+    "webpack": "^5.73.0",
+    "webpack-stream": "^7.0.0"
   },
   "dependencies": {
     "gulp-cli": "^2.3.0",
