--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "gulpfile.js",
   "type": "module",
   "scripts": {
-    "dev":"gulp",
+    "dev": "gulp",
+    "build": "gulp build --build",
     "svgSprive": "gulp svgSprive"
   },
   "repository": {
@@ -27,6 +28,7 @@
     "gulp-clean-css": "^4.3.0",
     "gulp-fonter": "^0.3.0",
     "gulp-group-css-media-queries": "^1.2.2",
+    "gulp-if": "^3.0.0",
     "gulp-imagemin": "^8.0.0",
     "gulp-newer": "^1.4.0",
     "gulp-notify": "^4.0.0",
